--- a/src/Components/static/Config.scss
+++ b/src/Components/static/Config.scss
@@ -3,3 +3,5 @@ $background-color: #111111;
 $navbar-color: #000;
 $border-color: #818790;
 $hover-color: rgb(218, 218, 218);
+$hover-red-color: #f50057;
+$background-card-color: #060606;
