--- a/src/Components/books/Elementlist.scss
+++ b/src/Components/books/Elementlist.scss
@@ -1,7 +1,16 @@
+@import "../static/Config.scss";
 .elements {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   &__container {
     display: flex;
+  }
+  &__pagination {
+    margin: 2vh;
+  }
+  .MuiPaginationItem-page {
+    color: $primary-color;
   }
 }
