--- a/src/Components/static/Config.scss
+++ b/src/Components/static/Config.scss
@@ -5,3 +5,4 @@ $border-color: #818790;
 $hover-color: rgb(218, 218, 218);
 $hover-red-color: #f50057;
 $background-card-color: #060606;
+$star-background-color: darken($background-card-color, 15%);
