--- a/src/Components/books/Books.scss
+++ b/src/Components/books/Books.scss
@@ -1,7 +1,9 @@
+@import "../static/Config.scss";
+
 .books-container {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 2fr;
   justify-content: center;
+  grid-template-columns: 1fr 2fr;
 }
