--- a/src/Components/books/Element.scss
+++ b/src/Components/books/Element.scss
@@ -19,15 +19,12 @@
     display: grid;
   }
   &__wrap {
-    display: flex;
+    @include flex-center-column;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
   }
   &__functions {
-    display: flex;
+    @include flex-center-column;
     gap: 1.33vh;
-    flex-direction: column;
     justify-content: center;
   }
   &__link {
