--- a/src/Components/books/Elementlist.scss
+++ b/src/Components/books/Elementlist.scss
@@ -1,9 +1,6 @@
 @import "../static/Config.scss";
 .elements {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include flex-center-column;
   &__container {
     width: 100%;
     display: grid;
