--- a/src/Components/static/Config.scss
+++ b/src/Components/static/Config.scss
@@ -5,6 +5,8 @@ $border-color: #818790;
 $hover-color: rgb(218, 218, 218);
 $hover-red-color: #f50057;
 $background-card-color: #060606;
+$success-color: rgb(22, 175, 22);
+$fail-color: rgb(180, 19, 19);
 $star-background-color: darken($background-card-color, 15%);
 
 @mixin sidebar-card {
