edit book is now add or edit, depending on props

--- a/src/Components/books/Sidebar.scss
+++ b/src/Components/books/Sidebar.scss
@@ -41,4 +41,10 @@
       border-color: transparent;
     }
   }
+  &__add-book {
+    @include sidebar-card;
+    @include flex-center-column;
+    margin-top: 3vh;
+    padding: 15px 0 15px 0;
+  }
 }
