--- a/src/Components/books/Element.scss
+++ b/src/Components/books/Element.scss
@@ -2,12 +2,25 @@
 
 .element {
   display: grid;
+  @media (max-width: $small-screen-res - 1) {
+    grid-template-columns: 2fr 2fr 1fr;
+  }
+  @media (max-width: $medium-screen-res) {
+    width: 90%;
+  }
+  @media (max-width: $very-small-screen-res) {
+    display: flex;
+    flex-direction: column;
+  }
   grid-template-columns: 1fr 3fr 1fr;
   margin-top: 1rem;
   border-bottom: 1px solid $border-color;
   &__image {
     height: 90%;
     width: 90%;
+    @media (max-width: $very-small-screen-res) {
+      width: 100%;
+    }
     transition: 0.66s;
     &:hover {
       height: 96%;
@@ -38,6 +51,9 @@
     &:hover {
       transition: 0.66s;
       color: $hover-red-color;
+    }
+    @media (max-width: $very-small-screen-res) {
+      margin-bottom: 25px;
     }
   }
   .MuiRating-iconEmpty {
