--- a/src/Components/static/App.scss
+++ b/src/Components/static/App.scss
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   box-sizing: border-box;
+  width: 100%;
   color: $primary-color;
   background-color: $background-color;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,4 +15,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+#root {
+  display: grid;
 }
