error handeling added + loading status

--- a/src/Components/books/Books.scss
+++ b/src/Components/books/Books.scss
@@ -11,4 +11,9 @@
   @media (min-width: $medium-screen-res) {
     grid-template-columns: 1fr 2fr;
   }
+  &__loading {
+    margin-top: 3vh;
+    margin-left: 3vh;
+    max-height: 50px;
+  }
 }
