--- a/src/Components/books/Element.scss
+++ b/src/Components/books/Element.scss
@@ -3,7 +3,10 @@
 .element {
   display: grid;
   @media (max-width: $small-screen-res - 1) {
-    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-columns: 2fr 3fr 2fr;
+    .MuiFormControlLabel-root {
+      margin-bottom: 10px;
+    }
   }
   @media (max-width: $medium-screen-res) {
     width: 90%;
@@ -11,10 +14,17 @@
   @media (max-width: $very-small-screen-res) {
     display: flex;
     flex-direction: column;
+    .MuiRating-sizeLarge {
+      font-size: 1.5rem;
+    }
   }
   grid-template-columns: 1fr 3fr 1fr;
   margin-top: 1rem;
   border-bottom: 1px solid $border-color;
+  .MuiFormControlLabel-root {
+    margin-right: 0;
+    margin-left: 0;
+  }
   &__image {
     height: 90%;
     width: 90%;
@@ -28,6 +38,9 @@
       transition: 0.66s;
     }
   }
+  &__author {
+    @include flex-center-column;
+  }
   &__description {
     display: grid;
   }
@@ -40,9 +53,37 @@
     gap: 1.33vh;
     justify-content: center;
   }
+  &__check {
+    background-color: $favourite-button-color;
+    padding-right: 15px;
+    border-radius: 4px;
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+      0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    display: flex;
+    justify-content: center;
+    align-self: stretch;
+    &:hover {
+      background-color: $hover-favourite-button-color;
+      transition: 0.3s;
+    }
+    &--remove {
+      background-color: $remove-button-color;
+      &:hover {
+        background-color: $hover-remove-button-color;
+        transition: 0.3s;
+      }
+    }
+  }
+  .MuiCheckbox-colorSecondary.Mui-checked {
+    color: $primary-color;
+  }
   &__link {
     color: $primary-color;
     text-decoration: none;
+    align-self: center;
+    @media (max-width: $small-screen-res) {
+      font-size: 1.4rem;
+    }
     font-size: 1.77rem;
     transition: 0.66s;
     &:visited {
