--- a/src/Components/static/Config.scss
+++ b/src/Components/static/Config.scss
@@ -8,6 +8,10 @@ $hover-color: rgb(218, 218, 218);
 $hover-red-color: #f50057;
 $background-card-color: #060606;
 $success-color: rgb(22, 175, 22);
+$favourite-button-color: #00a152;
+$hover-favourite-button-color: darken($favourite-button-color, 7%);
+$remove-button-color: #ff1744;
+$hover-remove-button-color: darken($remove-button-color, 7%);
 $fail-color: rgb(226, 59, 59);
 $star-background-color: darken($background-card-color, 15%);
 
