--- a/src/Components/books/Element.scss
+++ b/src/Components/books/Element.scss
@@ -40,7 +40,11 @@
   }
   &__author {
     @include flex-center-column;
+    .MuiRating-root {
+      color: $star-color;
+    }
   }
+
   &__description {
     display: grid;
   }
@@ -81,6 +85,7 @@
     color: $primary-color;
     text-decoration: none;
     align-self: center;
+
     @media (max-width: $small-screen-res) {
       font-size: 1.4rem;
     }
@@ -95,6 +100,9 @@
     }
     @media (max-width: $very-small-screen-res) {
       margin-bottom: 25px;
+    }
+    .MuiButton-containedPrimary {
+      background-color: $background-dark-button !important;
     }
   }
   .MuiRating-iconEmpty {
