--- a/src/Components/books/Sidebar.scss
+++ b/src/Components/books/Sidebar.scss
@@ -7,8 +7,13 @@
     font-size: 1.5rem;
     order: 1;
   }
+  &__sub-title {
+    display: flex;
+    justify-content: center;
+  }
   &__filter-container {
     @include sidebar-card;
+    @include shadow-card;
     order: 2;
   }
   &__option {
@@ -29,16 +34,21 @@
       grid-template-columns: 100%;
       max-height: 200px;
     }
+    .MuiCheckbox-colorSecondary.Mui-checked {
+      color: $remove-button-color;
+    }
   }
   &__inside-title {
-    text-align: center;
+    display: flex;
+    justify-content: center;
   }
   .MuiCheckbox-root {
-    color: #3f51b5;
+    color: $favourite-button-color;
   }
   &__sort {
     @include sidebar-card;
     @include flex-center-column;
+    @include shadow-card;
     order: 3;
     margin-top: 3vh;
     padding-bottom: 2vh;
@@ -63,9 +73,10 @@
   &__add-book {
     @include sidebar-card;
     @include flex-center-column;
+    @include shadow-card;
     order: 4;
     margin-top: 3vh;
-    padding: 15px 0 15px 0;
+    padding-bottom: 10px;
     .MuiButtonBase-root:last-of-type {
       margin-top: 15px;
     }
