--- a/src/Components/static/Navbar.scss
+++ b/src/Components/static/Navbar.scss
@@ -3,6 +3,9 @@
   width: 100%;
   height: 60px;
   background-color: $navbar-color;
+  box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.75);
   &__title {
     margin-left: 2rem;
     font-size: 1.45em;
