--- a/src/Components/static/Config.scss
+++ b/src/Components/static/Config.scss
@@ -9,7 +9,10 @@ $hover-red-color: #ff3d57;
 $background-dark-button: #2c3641;
 $background-card-color: #1f2935;
 $success-color: rgb(22, 175, 22);
+$background-info-button: #0037fa;
+$background-info-hover-button: darken($background-info-button, 7%);
 $favourite-button-color: #22cce2;
+$right-side-color: #192029;
 $star-color: #fdbf5e;
 $hover-favourite-button-color: darken($favourite-button-color, 7%);
 $remove-button-color: #ff3d57;
