--- a/src/Components/books/ElementDetails.scss
+++ b/src/Components/books/ElementDetails.scss
@@ -1,6 +1,7 @@
 @import "../static/Config.scss";
 .details {
   max-width: 1200px;
+  height: 70vh;
   margin: 0 auto;
   background-color: $background-card-color;
   border-radius: 10px;
@@ -24,17 +25,26 @@
     }
   }
   .informations {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 5vh;
+    display: grid;
+    grid-template-columns: 55% 45%;
+    grid-template-rows: 75% 25%;
+    margin-top: 5vh;
+    padding: 15px;
+    &__container {
+      @include flex-center-column;
+    }
+    &__alert {
+      height: 50px;
+    }
     &__image {
-      max-width: 300px;
-      margin-top: 3vh;
+      width: 75%;
+    }
+    &__date {
+      padding-bottom: 10px;
     }
     &__buttons {
       display: flex;
-      gap: 1vh;
+      align-items: center;
     }
     .MuiRating-iconEmpty {
       color: lighten($star-background-color, 25%);
@@ -51,7 +61,7 @@
     padding: 3vh;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: $navbar-color;
+    background-color: $right-side-color;
     /* Scrollbar */
     @include scroll-bar;
     &__title {
