--- a/src/Components/books/Sidebar.scss
+++ b/src/Components/books/Sidebar.scss
@@ -14,6 +14,7 @@
   &__filter-container {
     @include sidebar-card;
     @include shadow-card;
+    padding-bottom: 15px;
     order: 2;
   }
   &__option {
@@ -26,7 +27,7 @@
     row-gap: 1vh;
     padding: 10px;
     overflow: auto;
-    max-height: 400px;
+    max-height: 200px;
     @media (min-width: $very-small-screen-res) {
       grid-template-columns: 50% 50%;
     }
@@ -79,6 +80,12 @@
     padding-bottom: 10px;
     .MuiButtonBase-root:last-of-type {
       margin-top: 15px;
+    }
+    .MuiButton-containedSecondary {
+      background-color: $background-info-button;
+      &:hover {
+        background-color: $background-info-hover-button;
+      }
     }
   }
 }
