--- a/src/Components/static/Navbar.scss
+++ b/src/Components/static/Navbar.scss
@@ -1,7 +1,7 @@
 @import "Config.scss";
 .navbar {
   width: 100%;
-  height: 60px;
+  height: $navbar-height;
   background-color: $navbar-color;
   box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.75);
