--- a/src/Components/favourite/FavouriteList.scss
+++ b/src/Components/favourite/FavouriteList.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   .fav-container {
+    @include scroll-bar;
     margin-top: 5vh;
     width: 100%;
     max-width: 1200px;
@@ -59,7 +60,12 @@
       height: 100%;
     }
   }
-  .cont {
+  .fav-image-cont {
     display: flex;
+    height: 100%;
+    overflow: auto;
+  }
+  &__alert {
+    margin-top: 3vh;
   }
 }
