favourite and delete book stays after changing section

--- a/src/Components/static/Config.scss
+++ b/src/Components/static/Config.scss
@@ -10,6 +10,7 @@ $background-dark-button: #2c3641;
 $background-card-color: #1f2935;
 $success-color: rgb(22, 175, 22);
 $background-info-button: #0037fa;
+$icon-gray-color: #737781;
 $background-info-hover-button: darken($background-info-button, 7%);
 $favourite-button-color: #22cce2;
 $right-side-color: #192029;
