--- a/src/Components/favourite/FavouriteList.scss
+++ b/src/Components/favourite/FavouriteList.scss
@@ -54,6 +54,28 @@
     &__image-container {
       width: 100%;
       height: 100%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-end;
+      h1 {
+        position: absolute;
+        background: #1f2935;
+        padding: 0 5% 0 5%;
+        text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
+      }
+      h2 {
+        position: absolute;
+        background: #1f2935;
+        padding: 0 5% 0 5%;
+        top: 1px;
+        display: flex;
+        align-items: center;
+      }
+    }
+    &__star {
+      color: $star-color;
     }
     &__image {
       width: 100%;
