--- a/src/Components/favourite/FavouriteList.scss
+++ b/src/Components/favourite/FavouriteList.scss
@@ -5,6 +5,20 @@
   align-items: center;
   .fav-container {
     @include scroll-bar;
+    @include shadow-card;
+    @media (max-width: $very-small-screen-res) {
+      grid-template-columns: 100%;
+      width: 90%;
+      border-bottom-left-radius: 0px;
+    }
+    @media (min-width: $very-small-screen-res) and (max-width: $small-screen-res - 1) {
+      grid-template-columns: 1fr 1.5fr;
+      width: 90%;
+    }
+    @media (min-width: $small-screen-res) and (max-width: $medium-screen-res - 1) {
+      grid-template-columns: 0.75fr 1fr;
+      width: 90%;
+    }
     margin-top: 5vh;
     width: 100%;
     max-width: 1200px;
@@ -17,35 +31,59 @@
   .fav-aside {
     @include flex-center-column;
     @include scroll-bar;
+
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     justify-content: center;
     height: 100%;
     background-color: #1f2935;
+    @media (max-width: $very-small-screen-res - 1) {
+      border-top-left-radius: 0px;
+      border-bottom-left-radius: 0px;
+      padding-bottom: 15px;
+    }
     &__title {
       display: flex;
       align-items: center;
     }
     &__categories {
+      @include shadow-card;
       width: 90%;
       height: 80%;
-      max-height: 400px;
       overflow: auto;
       background-color: #25405b;
       border-radius: 5px;
     }
     &__category {
       @include flex-center-column;
+      border-bottom: 1px dashed $border-color;
+      &:last-child {
+        border-bottom: none;
+      }
       cursor: pointer;
       justify-content: center;
       width: 100%;
       height: 15%;
       &:hover {
         background-color: #e09f20;
+        transition: 0.4s;
       }
+    }
+    &__icon {
+      color: #ff3d57;
     }
   }
   .fav-images {
+    @media (max-width: $very-small-screen-res - 1) {
+      grid-template-columns: 100%;
+      grid-auto-rows: 100%;
+    }
+    @media (min-width: $very-small-screen-res) and (max-width: $small-screen-res - 1) {
+      grid-template-columns: 100%;
+    }
+    @media (min-width: $small-screen-res) and (max-width: $medium-screen-res - 1) {
+      grid-template-columns: 50% 50%;
+    }
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 50%;
@@ -86,6 +124,9 @@
     display: flex;
     height: 100%;
     overflow: auto;
+    @media (max-width: $very-small-screen-res - 1) {
+      margin-top: 15px;
+    }
   }
   &__alert {
     margin-top: 3vh;
