--- a/src/Components/static/Navbar.scss
+++ b/src/Components/static/Navbar.scss
@@ -23,6 +23,7 @@
   &__item {
     padding: 0 1rem;
     text-decoration: none;
+    color: $primary-color;
     &:visited {
       color: $primary-color;
     }
